// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoActionScan render NoActionScan screen Renders NoActionScan screen before service call with manual scan 1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.GENERICS.BARCODE_SCAN_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "marginTop": 16,
            "width": "70%",
          }
        }
        title="[missing \\"en.GENERICS.OK\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <ManualScanComponent
      keyboardType="numeric"
      placeholder="[missing \\"en.GENERICS.ENTER_UPC_ITEM_NBR\\" translation]"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#000000"
        name="barcode-scan"
        size={100}
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <Text>
          [missing "en.ITEM.SCAN_FOR_NO_ACTION" translation]
        </Text>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;

exports[`NoActionScan render NoActionScan screen Renders NoActionScan screen before service call without manual scan 1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <mockMaterialCommunityIcons
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      [missing "en.GENERICS.BARCODE_SCAN_ERROR" translation]
    </Text>
    <View
      style={
        Object {
          "alignContent": "space-around",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#D6512D"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "marginTop": 16,
            "width": "70%",
          }
        }
        title="[missing \\"en.GENERICS.OK\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#000000"
        name="barcode-scan"
        size={100}
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <Text>
          [missing "en.ITEM.SCAN_FOR_NO_ACTION" translation]
        </Text>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;

exports[`NoActionScan render NoActionScan screen Renders NoActionScan screen when waiting for service call 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`NoActionScan render NoActionScan screen render screen with navigation and state 1`] = `
<View
  onLayout={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#000000"
        name="barcode-scan"
        size={100}
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <Text>
          [missing "en.ITEM.SCAN_FOR_NO_ACTION" translation]
        </Text>
      </View>
    </View>
  </View>
</View>
`;
